--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -1,23 +1,26 @@
 #top {
   width: 800px;
   background-color: #dcc9f4;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px auto;
+  
   text-align: center;
 }
 
 #top .top-child {
   width: 20%;
-  background: #ffd9db;
+  background-color: #ffd9df;
   display: inline-block;
 }
 #middle {
+  margin: 20px auto;
   width: 800px;
   height: 800px;
-  background-color: #ffd9db 
+  background-color: #ffd9df;
+  position: relative;
+  
 } 
 #middle-child01 {
-  position: relative;
+  position: absolute;
   top: 100px;
   left: 100px;
   width: 200px;
@@ -25,16 +28,16 @@
   background-color: #87ceeb;
 }
 #middle-child02 {
-  position: relative;
-  top: 100px;
+  position: absolute;
+  top: 300px;
   left: 300px;
   width: 200px;
   height: 200px; 
   background-color: #87ceeb;
 }
 #middle-child03 {
-  position: relative;
-  top: 100px;
+  position: absolute;
+  top: 500px;
   left: 500px;
   width: 200px;
   height: 200px;
@@ -44,10 +47,11 @@
 #bottom {
   margin-top: 20px;
   margin-bottom: 20px;
+  margin: 20px auto;
   text-align: center;
   width: 800px;
   height: 300px;
-  background-color: #87ceeb
+  background-color: #87ceeb;
   
   
 }
@@ -63,7 +67,7 @@
   left: 200px;
   width: 400px;
   height: 100px;
-  background-color: #e5dcf0
+  background-color: #e5dcf0;
   
 }
 #bottom-child03 {
@@ -72,5 +76,5 @@
   left: 400px;
   width: 400px;
   height: 100px;
-  background-color: #e5dcf0
+  background-color: #e5dcf0;
 }
